--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<!--  Main navigation  -->
 				<ul class="main-nav nav navbar-nav navbar-right">
 					<li><a href="#home">Inicio</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#about">Acerca de</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#service">Services</a></li>
 					<li><a href="#pricing">Prices</a></li>
